--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.6.0",
     "axios": "^1.6.7",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "googleapis": "^133.0.0",
+    "luxon": "^3.4.4",
     "mime-types": "^2.1.35",
     "nodemon": "^3.1.0"
   }
